--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-rating-stars-component": "^2.2.0",
     "superjson": "1.9.1",
     "yet-another-react-lightbox": "^2.2.7",
