--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-loading-skeleton": "^3.2.0",
     "react-rating-stars-component": "^2.2.0",
     "superjson": "1.9.1",
     "yet-another-react-lightbox": "^2.2.7",
